fix(input): fix the style of input on safari browser

--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -24,10 +24,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 }
 
-input {
-  line-height: normal;
-}
-
 #app {
   min-width: 1200px;
   margin: 0 auto;
@@ -233,4 +229,9 @@ input {
     background-color: #F6F7FB;
     border-right: 1px solid #D9D9D9;
   }
+}
+
+/* 修复 Safari 浏览器的光标问题 */
+input {
+  line-height: normal !important;
 }
